[gd_scene load_steps=2 format=3 uid="uid://b2pn1ydyik1qs"]

[ext_resource type="Script" uid="uid://xd08su58u0ro" path="res://Enviroment/ZoneSystem/zone_manager.gd" id="1_klnss"]

[node name="ZoneManager" type="Node2D"]
script = ExtResource("1_klnss")

[node name="CameraTarget" type="Node2D" parent="."]
position = Vector2(64, 0)

[node name="Camera2D" type="Camera2D" parent="CameraTarget"]
anchor_mode = 0
zoom = Vector2(0.3, 0.3)
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_drag_margin = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
